--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size              : 14;
+$doc-font-size              : 16;
 
 /* paragraph indention */
 $paragraph-indent           : false; // true, false (default)
@@ -60,8 +60,8 @@ $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
 
-$primary-color              : #404345;
-$success-color              : #62c462;
+$primary-color              : #2e2e2e;
+$success-color              : #c4a262;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 $info-color                 : #06612c;
