--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -84,7 +84,7 @@
 
   img {
     max-width: 175px;
-//     max-height:100px;
+    max-height:150px;
     border-radius: 50%;
 
     @include breakpoint($large) {
