--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -1,4 +1,4 @@
-/* ==========================================================================
+a/* ==========================================================================
    SIDEBAR
    ========================================================================== */
 
@@ -74,7 +74,7 @@
   vertical-align: top;
   width: 36px;
   // set width only, for non-square avatars
-  height: 36px;
+  // height: 36px;
 
   @include breakpoint($large) {
     display: block;
