--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -84,7 +84,7 @@ a/* ==========================================================================
 
   img {
     max-width: 175px;
-    max-height:180px;
+    // max-height:180px;
     border-radius: 50%;
 
     @include breakpoint($large) {
