--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -83,7 +83,7 @@ a/* ==========================================================================
   }
 
   img {
-    max-width: 175px;
+    // max-width: 175px;
     // max-height:180px;
     border-radius: 50%;
 
