--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -83,7 +83,7 @@ a/* ==========================================================================
   }
 
   img {
-    // max-width: 175px;
+    max-width: 100px;
     // max-height:180px;
     border-radius: 50%;
 
@@ -105,7 +105,7 @@ a/* ==========================================================================
     display: block;
     width: 100%;
     padding-left: 0;
-    padding-right: 0;
+    padding-right: 0;aa
   }
 }
 
