--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -1,4 +1,4 @@
-a/* ==========================================================================
+/* ==========================================================================
    SIDEBAR
    ========================================================================== */
 
@@ -35,12 +35,12 @@ a/* ==========================================================================
   }
 
   h3, h4 {
-    font-size: $type-size-4;
+    font-size: $type-size-5;
   }
 
   p, li {
     font-family: $sans-serif;
-    font-size: $type-size-5;
+    font-size: $type-size-6;
     line-height: 1.5;
   }
 
@@ -83,8 +83,7 @@ a/* ==========================================================================
   }
 
   img {
-    max-width: 150px;
-    max-height:180px;
+    max-width: 175px;
     border-radius: 50%;
 
     @include breakpoint($large) {
@@ -105,7 +104,7 @@ a/* ==========================================================================
     display: block;
     width: 100%;
     padding-left: 0;
-    padding-right: 0;aa
+    padding-right: 0;
   }
 }
 
