Update _variables.scss_changed color of link

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,7 +64,7 @@ $primary-color              : #2e2e2e;
 $success-color              : #c4a262;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #2989CC;
+$info-color                 : #9ABFC9;
 
 /* brands */
 $behance-color              : #1769FF;
@@ -91,7 +91,7 @@ $xing-color                 : #006567;
 
 /* links */
 $link-color                 : $info-color;
-$link-color-hover           : mix(#000, $link-color, 50%);
+$link-color-hover           : mix(#000, $link-color, 10%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%);
