--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,7 +64,7 @@ $primary-color              : #2e2e2e;
 $success-color              : #c4a262;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #9ABFC9;
+$info-color                 : #6EBFC9;
 
 /* brands */
 $behance-color              : #1769FF;
